Remove redundant <acronym> tags

--- a/env/barrage-boom-fra.html
+++ b/env/barrage-boom-fra.html
@@ -95,7 +95,7 @@
 					<img src="../images/lowering-the-boom-1.jpg" alt="" width="300" height="199" /><br />
 					Des employ&eacute;s et des entrepreneurs de <acronym title="Travaux publics et Services gouvernementaux Canada">TPSGC</acronym> se familiarisent avec le nettoyage des d&eacute;versements en milieu marin, sujet tr&egrave;s important, &agrave; la cale s&egrave;che d'Esquimalt. Ce barrage flottant gonflable, de couleur orange, sert &agrave; contenir les d&eacute;versements de p&eacute;trole. </div>
 
-				<p>Au d&eacute;but du printemps, &agrave; la cale s&egrave;che d'Esquimalt (plus grande cale s&egrave;che au Canada), une formation sur l'intervention en cas de d&eacute;versement de p&eacute;trole a &eacute;t&eacute; donn&eacute;e aux employ&eacute;s et aux entrepreneurs de Travaux publics et Services gouvernementaux Canada (<acronym title='Travaux publics et Services gouvernementaux Canada'>TPSGC</acronym>) travaillant sur place.</p>
+				<p>Au d&eacute;but du printemps, &agrave; la cale s&egrave;che d'Esquimalt (plus grande cale s&egrave;che au Canada), une formation sur l'intervention en cas de d&eacute;versement de p&eacute;trole a &eacute;t&eacute; donn&eacute;e aux employ&eacute;s et aux entrepreneurs de Travaux publics et Services gouvernementaux Canada (TPSGC) travaillant sur place.</p>
 					
 				<p>Le cours a port&eacute; sur les caract&eacute;ristiques et le maniement s&eacute;curitaire des produits p&eacute;troliers, l'&eacute;quipement de protection individuel, le confinement, le nettoyage, l'entreposage et la gestion des d&eacute;chets. Certains aspects ont &eacute;t&eacute; abord&eacute;s par des &eacute;tudes de cas, des d&eacute;monstrations concr&egrave;tes et des exercices pratiques.</p>
 					
