--- a/env/ecocivisme-environment-eng.html
+++ b/env/ecocivisme-environment-eng.html
@@ -111,7 +111,7 @@
 					on the West Coast of North America, to <acronym title="International Organization for Standardization">ISO</acronym>&nbsp;14001. Located
 					in a suburb of Victoria, British Columbia, the dock is owned
 					and operated by Public Works and Government Services Canada
-					(<acronym title="Public Works and Government Services Canada">PWGSC</acronym>), but all the shipbuilding and repairs are done by
+					(PWGSC), but all the shipbuilding and repairs are done by
 					private companies.</p>
 				<p><acronym title="International Organization for Standardization">ISO</acronym>&nbsp;14001 registration has come about because in&nbsp;1999 the dock's management
 					and tenants agreed that an organized approach was necessary
@@ -140,7 +140,7 @@
 					spirit.</p>
 				<p>The Canadian General Standards Board's August&nbsp;2001 audit focused primarily
 					on two issues. One involved the division of activities between
-					the facility operator (<acronym title="Public Works and Government Services Canada">PWGSC</acronym>) and the service providers,
+					the facility operator (PWGSC) and the service providers,
 					and the need for a dividing line between responsibility and
 					influence to be clearly established. The other concerned
 					the difficulty in defining the scope of the entity to be
