--- a/index-fra.html
+++ b/index-fra.html
@@ -106,7 +106,7 @@
 				<div class="option2">
 					<h2>Qui sommes-nous?</h2>
 					<p>La <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym> est une division du minist&egrave;re f&eacute;d&eacute;ral des
-						Travaux publics et des Services gouvernementaux du Canada (<acronym title='Travaux publics et Services gouvernementaux Canada'>TPSGC</acronym>).</p>
+						Travaux publics et des Services gouvernementaux du Canada (TPSGC).</p>
 					<p>Les services de r&eacute;paration de navires sont assur&eacute;s 24&nbsp;heures
 						sur 24,&nbsp;7&nbsp;jours sur 7&nbsp;et 365&nbsp;jours par ann&eacute;e. Nous proposons toute
 						la gamme des services de r&eacute;paration
