--- a/rendement-performance-fra.html
+++ b/rendement-performance-fra.html
@@ -93,7 +93,7 @@
 					to Jim Milne, at <a href="mailto:jim.milne@tpsgc.gc.ca">Jim.Milne@tpsgc.gc.ca</a></p>
 				<hr /> -->
 				<p>&Agrave; la cale s&egrave;che d'Esquimalt (CSE), Travaux publics et Services
-					gouvernementaux Canada (<acronym title='Travaux publics et Services gouvernementaux Canada'>TPSGC</acronym>) fournira de fa&ccedil;on raisonnable&nbsp;:</p>
+					gouvernementaux Canada (TPSGC) fournira de fa&ccedil;on raisonnable&nbsp;:</p>
 				<ul>
 					<li>es services d'administration, pour les besoins de la r&eacute;servation
 						de services ou d'espace pour bateaux;</li>
