--- a/env/programme-program-eng.html
+++ b/env/programme-program-eng.html
@@ -104,7 +104,7 @@
 				management is an integral part of attaining that goal. In order to ensure
 				business at the facility is conducted in an environmentally responsible manner,
 				the <acronym title="Esquimalt Graving Dock">EGD</acronym> has implemented
-				an Environmental Management System (<acronym title="Environmental Management System">EMS</acronym>)
+				an Environmental Management System (EMS)
 				certified to the internationally recognized <acronym title="International Organization for Standardization">ISO</acronym>&nbsp;14001 <acronym title="Environmental Management System">EMS</acronym> standard.
       </p>
 
@@ -112,7 +112,7 @@
 
       <p>The <acronym title="International Organization for Standardization">ISO</acronym>&nbsp;14001
         certification is an internationally recognized standard for the development
-        and implementation of an Environmental Management System (<acronym title="Environmental Management System">EMS</acronym>).
+        and implementation of an Environmental Management System (EMS).
         Qualifying for this recognition in&nbsp;2001, the <acronym title="Esquimalt Graving Dock">EGD</acronym> has
         implemented this management system to help identify and prioritize environmental
         issues on site.</p>
