--- a/env/gestion-management-fra.html
+++ b/env/gestion-management-fra.html
@@ -6,7 +6,7 @@
 <!-- DEBUT DE L'EN-TETE | HEADER BEGINS -->
 <!-- DEBUT DU TITRE | TITLE BEGINS -->
 
-<title>Gestion de l'environnement &ndash; CSE &ndash; TPSGC</title>
+<title>Meilleures pratiques de gestion de l'environnement &ndash; CSE &ndash; TPSGC</title>
 
 <!-- FIN DU TITRE | TITLE ENDS -->
 <!-- DEBUT DES METADONNEES | METADATA BEGINS -->
@@ -14,7 +14,7 @@
 <link rel="schema.dc" href="http://purl.org/dc/elements/1.1/" />
 <link rel="schema.dc" href="http://purl.org/dc/terms/" />
 
-<meta name="dc.title" content="Gestion de l'environnement - CSE - TPSGC" />
+<meta name="dc.title" content="Meilleures pratiques de gestion de l'environnement - CSE - TPSGC" />
 <meta name="dc.subject" scheme="gccore" content="Navire; Quai; Environnement; Meilleures pratiques; Formation; Sensibilisation; Participation; Évaluation environnementale" />
 
 <meta name="dc.language" scheme="ISO639-2/T" content="fra" />
@@ -70,7 +70,7 @@
 		<p class="breadcrumb">
 			<!--#include virtual="/clf20/ssi/bread-pain-fra.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-fra.html"-->
 			&gt;&nbsp;<a href="programme-program-fra.html">Programme
-			Environnemental</a> &gt; Gestion de l'environnement</p>
+			Environnemental</a> &gt; Meilleures pratiques de gestion de l'environnement</p>
 		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->
 		<div class="colLayout">
 			<!-- DEBUT DE LA MISE EN PAGE DE DEUX COLONNES | TWO COLUMN LAYOUT BEGINS -->
