Just questions please, no concerns

--- a/env/programme-program-eng.html
+++ b/env/programme-program-eng.html
@@ -140,7 +140,7 @@
 		  </ul>
 
       <p>
-        If you have any questions or concerns regarding
+        If you have any questions regarding
 				the Environmental Policy or the environmental programs at the Esquimalt Graving
         Dock, please contact the Environmental Coordinator at:
       </p>
