--- a/env/programme-program-fra.html
+++ b/env/programme-program-fra.html
@@ -150,7 +150,7 @@
       </ul>
 
       <p>
-        Si vous avez des questions ou des pr&eacute;occupations &agrave; l'&eacute;gard
+        Si vous avez des questions &agrave; l'&eacute;gard
 				de la Politique environnementale ou des programmes environnementaux de la
 				cale s&egrave;che d'Esquimalt, veuillez communiquer avec le coordonnateur
         environnemental&nbsp;:
