Remove the word 'all'

--- a/env/gestion-management-eng.html
+++ b/env/gestion-management-eng.html
@@ -97,7 +97,7 @@
         <p>
           All of those conducting business at the Esquimalt Graving Dock (EGD) are expected
           to operate in an environmentally responsible manner. This includes compliance
-          with all applicable environmental regulations and standards. In support
+          with applicable environmental regulations and standards. In support
           of this, <acronym title="Esquimalt Graving Dock">EGD</acronym> has developed a 
           comprehensive set of Environmental Best Management Practices (EBMPs).
         </p>
