--- a/env/gestion-management-fra.html
+++ b/env/gestion-management-fra.html
@@ -93,8 +93,8 @@
         <p>
           On s'attend &agrave; ce que quiconque m&egrave;ne des activit&eacute;s
           dans les installations de la cale s&egrave;che d'Esquimalt (CSE) le fasse dans
-          le respect de l'environnement, y compris en conformit&eacute; avec l'ensemble
-          de la r&eacute;glementation et des normes environnementales applicables. &Agrave; cetter
+          le respect de l'environnement, y compris en conformit&eacute; avec
+          la r&eacute;glementation et des normes environnementales applicables. &Agrave; cetter
           fin, <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym> a &eacute;labor&eacute; une s&eacute;rie
           d&eacute;taill&eacute;e de meilleures pratiques de gestion de l'environnement
           (MPGE).
