Consolidate environmental pages

--- a/entreprises-firms-eng.html
+++ b/entreprises-firms-eng.html
@@ -133,8 +133,12 @@
         <span class="value"><a href="mailto:esquimalt@telus.net"> esquimalt@telus.net </a></span>
         <br style="clear: both" />
 
-				<div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
-										Top of Page</a> </div>
+        <div class="topPage">
+          <a href="#tphp" title="Return to Top of Page">
+            <img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
+            Top of Page
+          </a>
+        </div>
 
 				<h2>Intercon Marine Inc. </h2>
 
