--- a/env/programme-program-eng.html
+++ b/env/programme-program-eng.html
@@ -92,57 +92,135 @@
 				Environmental Program
 				<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 		  </h1>
-      <p style="text-align:center;"><em>It is the goal of the Esquimalt
-				Graving Dock (EGD), in partnership with the ship repair industry, to be the premier
-				ship repair, construction and maintenance facility on the west coast of North
-        America.</em></p>
 
 			<img src="../images/dock-cale-2.jpg" alt="" width="300" height="400" style="float: right; padding-left: 10px;" />
+
+      <p>
+        It is the goal of the Esquimalt
+				Graving Dock (EGD), in partnership with the ship repair industry, to be the premier
+				ship repair, construction and maintenance facility on the west coast of North
+        America.
+      </p>
 
       <p>
         The	Esquimalt Graving Dock and its users recognize that responsible environmental
 				management is an integral part of attaining that goal. In order to ensure
 				business at the facility is conducted in an environmentally responsible manner,
-				the <acronym title="Esquimalt Graving Dock">EGD</acronym> has implemented
+				the Esquimalt Graving Dock has implemented
 				an Environmental Management System (EMS)
 				certified to the internationally recognized <acronym title="International Organization for Standardization">ISO</acronym>&nbsp;14001 <acronym title="Environmental Management System">EMS</acronym> standard.
       </p>
 
+      <div class="topPage">
+        <a href="#tphp" title="Return to Top of Page">
+          <img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
+          Top of Page
+        </a>
+      </div>
+
       <h2 id="iso"><acronym title="International Organization for Standardization">ISO</acronym>&nbsp;14001</h2>
 
-      <p>The <acronym title="International Organization for Standardization">ISO</acronym>&nbsp;14001
+      <p>
+        The <acronym title="International Organization for Standardization">ISO</acronym>&nbsp;14001
         certification is an internationally recognized standard for the development
         and implementation of an Environmental Management System (EMS).
-        Qualifying for this recognition in&nbsp;2001, the <acronym title="Esquimalt Graving Dock">EGD</acronym> has
+        Qualifying for this recognition in&nbsp;2001, the Esquimalt Graving Dock has
         implemented this management system to help identify and prioritize environmental
-        issues on site.</p>
-
-      <p>By signing the <acronym title="Esquimalt Graving Dock">EGD</acronym> <a href="politique-policy-eng.html">Environmental
-          Policy</a>, upper management has made a commitment towards the prevention
-          of pollution, the protection of the natural environment and the compliance
-          with applicable environmental regulations and standards.</p>
-    
-      <p>Since certification in&nbsp;2001, this environmental management system has provided
-      the framework for the implementation of successful, cost effective environmental
-      programs and initiatives. These programs help ensure on site businesses conduct
-      their operations in a conscientious manner by reducing environmental impacts
-      and demonstrating consideration for the health, safety and well being of
-      on-site users and the surrounding community.</p>
-
-			<p>The Esquimalt Graving Dock's commitment to environmental protection is
-				outlined in the <acronym title="Esquimalt Graving Dock">
-          EGD</acronym> <a href="politique-policy-eng.html">Environmental Policy</a>.
+        issues on site.
       </p>
 
-			<ul style="list-style-type:none; padding-left:0; margin-left:0;">
-        <li><a href="gestion-management-eng.html">Environmental Best Management Practices</a></li>
-        <li><a href="interet-interest-eng.html">Articles of Interest</a></li>
-		  </ul>
+      <p>
+        Since certification in&nbsp;2001, this environmental management system has provided
+        the framework for the implementation of successful, cost effective environmental
+        programs and initiatives. These programs help ensure on site businesses conduct
+        their operations in a conscientious manner by reducing environmental impacts
+        and demonstrating consideration for the health, safety and well being of
+        on-site users and the surrounding community.
+      </p>
+
+      <div class="topPage">
+        <a href="#tphp" title="Return to Top of Page">
+          <img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
+          Top of Page
+        </a>
+      </div>
+
+      <h2 id="policy-politique">Environmental Policy</h2>
+
+      <p>
+        The Esquimalt Graving Dock's commitment to environmental protection is
+        outlined in the <acronym title="Esquimalt Graving Dock">
+        EGD</acronym> <a href="politique-policy-eng.html">Environmental Policy</a>.
+      </p>
+
+      <p>
+        By signing the <acronym title="Esquimalt Graving Dock">EGD</acronym> <a href="politique-policy-eng.html">Environmental
+        Policy</a>, upper management has made a commitment towards the prevention
+        of pollution, the protection of the natural environment and the compliance
+        with applicable environmental regulations and standards.
+      </p>
+
+      <div class="topPage">
+        <a href="#tphp" title="Return to Top of Page">
+          <img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
+          Top of Page
+        </a>
+      </div>
+
+      <h2 id="ebmps-mpges">Environmental Best Management Practices</h2>
+
+      <p>
+        All of those conducting business at the Esquimalt Graving Dock are expected
+        to operate in an environmentally responsible manner. This includes compliance
+        with applicable environmental regulations and standards. In support
+        of this, <acronym title="Esquimalt Graving Dock">EGD</acronym> has developed a 
+        comprehensive set of Environmental Best Management Practices (EBMPs).
+      </p>
+
+      <p>
+        <acronym title="Environmental Best Management Practices">EBMPs</acronym> are
+        ways of reducing and preventing the discharge of pollutants into the environment
+        through good housekeeping, maintenance, materials management, communications,
+        work practices and technology. Most <acronym title="Environmental Best Management Practices">EBMPs</acronym> are
+        a form of source control for pollution prevention. Their implementation
+        can minimize the production of waste and pollution from activities such
+        as paint removal and surface preparation, painting, engine maintenance
+        and materials handling.
+      </p>
+
+      <div class="topPage">
+        <a href="#tphp" title="Return to Top of Page">
+          <img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
+          Top of Page
+        </a>
+      </div>
+
+      <h2 id="articles">Articles of Interest</h2>
+
+			<ul>
+        <li><a href="simple-eng.html">Keeping It Simple: Bubble Curtain Saves Fish, Seals, and Valuable Time</a>&nbsp;(2003)</li>
+        <li><a href="ecocivisme-environment-eng.html"><acronym title="Esquimalt Graving Dock">EGD</acronym>: A Good Environmental Citizen</a>&nbsp;(2002)</li>
+        <li><a href="barrage-boom-eng.html">Lowering the Boom on Oil Spills</a>&nbsp;(2000)</li>
+        <li>
+          <a href="voie-way-eng.html"><acronym title="Esquimalt Graving Dock">EGD</acronym>: Leading the Way with
+          <acronym title="International Standards Organization">ISO</acronym>&nbsp;14001</a>&nbsp;(2000)
+        </li>
+      </ul>
+
+      <div class="topPage">
+        <a href="#tphp" title="Return to Top of Page">
+          <img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
+          Top of Page
+        </a>
+      </div>
+
+      <h2 id="coordonnateur-coordinator">Environmental Coordinator</h2>
 
       <p>
         If you have any questions regarding
 				the Environmental Policy or the environmental programs at the Esquimalt Graving
-        Dock, please contact the Environmental Coordinator at:
+        Dock, or to obtain a copy of the <acronym title="Esquimalt Graving Dock">EGD</acronym> 
+        Environmental Best Management Practices, please contact the Environmental Coordinator at:
       </p>
 
 		  <p>
