--- a/env/programme-program-fra.html
+++ b/env/programme-program-fra.html
@@ -89,23 +89,30 @@
 				<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
       </h1>
 
-      <p style="text-align:center;">
-        <em>La Cale s&egrave;che d'Esquimalt (CSE),
-        en partenariat avec l'industrie de r&eacute;partion de navires, veut &ecirc;tre
-        le meilleur chantier naval de la c&ocirc; Ouest de l'Am&eacute;rique du Nord.</em>
-      </p>
-
       <img src="../images/dock-cale-2.jpg" alt="" width="300" height="400" style="float: right; padding-left: 10px;" />
+
+      <p>
+        La Cale s&egrave;che d'Esquimalt (CSE),
+        en partenariat avec l'industrie de r&eacute;partion de navires, veut &ecirc;tre
+        le meilleur chantier naval de la c&ocirc; Ouest de l'Am&eacute;rique du Nord.
+      </p>
 
       <p>
         La cale s&egrave;che d'Esquimalt et ses usagers sont conscients que l'atteinte
 				de cet objectif passe obligatoirement par une gestion respectueuse de l'environnement.
 				Afin de garantir que les activit&eacute;s men&eacute;es dans ses installations
-				s'effectuent dans le respect de l'environnement, la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> a
+				s'effectuent dans le respect de l'environnement, la cale s&egrave;che d'Esquimalt a
 				mis en &#339;uvre un syst&egrave;me de gestion de l'environnement (SGE)
 				qui a &eacute;t&eacute; certifi&eacute; conforme &agrave; la norme internationale <acronym title="Organisation internationale de normailisation">ISO</acronym>&nbsp;14001
         concerant les <acronym title="syst&egrave;me de gestion de l'environnement">SGE</acronym>.
       </p>
+
+      <div class="topPage"> 
+        <a href="#tphp" title="Retourner au haut de la page">
+          <img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
+          Haut de la page
+        </a> 
+      </div>
 
       <h2 id="iso"><acronym title="Organisation internationale de normailisation">ISO</acronym>&nbsp;14001</h2>
 
@@ -113,18 +120,10 @@
         La certification <acronym title="Organisation internationale de normailisation">IS0</acronym> 14001
         est un norme internationale concerant l'&eacute;laboration et la mise en &#339;uvre
         d'un syst&egrave;me de gestion de l'environnement (SGE).
-        Admissible &agrave; cette certification en 2001, la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> a
+        Admissible &agrave; cette certification en 2001, la cale s&egrave;che d'Esquimalt a
         mis en &#339;uvre ce syst&egrave;me de gestion afin de l'aider &agrave; cerner
         les probl&egrave;mes environnementaux dans ses installations et &agrave; &eacute;tablir
         un ordre de priorit&eacute; &agrave; cet &eacute;gard.
-      </p>
-
-      <p>
-        En adoptant la <a href="politique-policy-fra.html">Politique environnementale</a> de
-        la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym>, la haute
-        direction s'est engag&eacute;e &agrave; pr&eacute;venir la pollution, &agrave; prot&eacute;ger
-        le milieu naturel et &agrave; respecter la r&eacute;glementation et les
-        normes environnementales applicables.
       </p>
 
       <p>
@@ -138,22 +137,93 @@
         des installations et de la collectivit&eacute; environnante.
       </p>
 
+      <div class="topPage"> 
+        <a href="#tphp" title="Retourner au haut de la page">
+          <img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
+          Haut de la page
+        </a> 
+      </div>
+
+      <h2 id="policy-politique">Politique environnementale</h2>
+
       <p>
         L'engagement de la cale s&egrave;che d'Esquimalt envers la protection de
 				l'environnement est &eacute;nonc&eacute; dans la <a href="politique-policy-fra.html">Politique
           environnementale</a> de la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym>.
       </p>
 
-			<ul style="list-style-type:none; padding-left:0; margin-left:0;">
-				<li><a href="gestion-management-fra.html">Meilleures pratiques de gestion de l'environnement</a></li>
-				<li><a href="interet-interest-fra.html">Articles d'int&eacute;r&ecirc;t</a></li>
+      <p>
+        En adoptant la <a href="politique-policy-fra.html">Politique environnementale</a> de
+        la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym>, la haute
+        direction s'est engag&eacute;e &agrave; pr&eacute;venir la pollution, &agrave; prot&eacute;ger
+        le milieu naturel et &agrave; respecter la r&eacute;glementation et les
+        normes environnementales applicables.
+      </p>
+
+      <div class="topPage"> 
+        <a href="#tphp" title="Retourner au haut de la page">
+          <img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
+          Haut de la page
+        </a> 
+      </div>
+
+      <h2 id="ebmps-mpges"> Meilleures pratiques de gestion de l'environnement</h2>
+
+      <p>
+        On s'attend &agrave; ce que quiconque m&egrave;ne des activit&eacute;s
+        dans les installations de la cale s&egrave;che d'Esquimalt (CSE) le fasse dans
+        le respect de l'environnement, y compris en conformit&eacute; avec
+        la r&eacute;glementation et des normes environnementales applicables. &Agrave; cetter
+        fin, <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym> a &eacute;labor&eacute; une s&eacute;rie
+        d&eacute;taill&eacute;e de meilleures pratiques de gestion de l'environnement
+        (MPGE).
+      </p>
+
+      <p>
+        Les <acronym title="meilleures pratiques de gestion de l'environnement">MPGE</acronym>
+        constituent un moyen de r&eacute;duire et de pr&eacute;venir le rejet de
+        polluants dans l'environnement gr&acirc;ce &agrave; de bonnes pratiques
+        d'entretien, de maintenance, de gestion du mat&eacute;riel, de communications
+        et de travail et &agrave; la technologie. La plupart des 
+        <acronym title="meilleures pratiques de gestion de l'environnement">MPGE</acronym> sont
+        une forme de contr&ocirc;le &agrave; la source &agrave; des fins de pr&eacute;vention
+        de la pollution, et leur mise en &#339;uvre peut r&eacute;duire au minimum
+        les d&eacute;chets et la pollution provenant d'activit&eacute;s comme l'enl&egrave;vement
+        de la peinture et la pr&eacute;paration de surface, le peinturage, l'entretien
+        de moteurs et la manutention de mat&eacute;riaux. 
+      </p>
+
+      <div class="topPage"> 
+        <a href="#tphp" title="Retourner au haut de la page">
+          <img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
+          Haut de la page
+        </a> 
+      </div>
+
+      <h2 id="articles">Articles d'Int&eacute;r&ecirc;t</h2>
+
+      <ul>
+        <li><a href="simple-fra.html">Une id&eacute;e toute simple&nbsp;: un rideau de bulles d'air permet de sauver des poissons et des phoques, et d'&eacute;pargner un temps pr&eacute;cieux</a> (2003)</li>
+        <li><a href="ecocivisme-environment-fra.html">La cale s&egrave;che d'Esquimalt&nbsp;: un exemple d'&eacute;cocivisme</a> (2002) </li>
+        <li><a href="barrage-boom-fra.html">La cale s&egrave;che d'Esquimalt fait barrage aux d&eacute;versements de p&eacute;trole</a> (2000) </li>
+        <li><a href="voie-way-fra.html"><acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym>&nbsp;: chef de file en voie vers la certification <acronym title="Organisation internationale de normailisation">ISO</acronym>&nbsp;14001</a>&nbsp;(2000)</li>
       </ul>
+
+      <div class="topPage"> 
+        <a href="#tphp" title="Retourner au haut de la page">
+          <img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
+          Haut de la page
+        </a> 
+      </div>
+
+      <h2 id="coordonnateur-coordinator">Coordonnateur environnemental</h2>
 
       <p>
         Si vous avez des questions &agrave; l'&eacute;gard
 				de la Politique environnementale ou des programmes environnementaux de la
-				cale s&egrave;che d'Esquimalt, veuillez communiquer avec le coordonnateur
-        environnemental&nbsp;:
+        cale s&egrave;che d'Esquimalt, ou pour obtenir une copie des meilleures pratiques 
+        de gestion de l'environnement de la <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym>,
+        veuillez communiquer avec le coordonnateur environnemental&nbsp;:
       </p>
 
 		  <p>
