--- a/site-fra.html
+++ b/site-fra.html
@@ -92,21 +92,16 @@
 					<li> <a href="index-fra.html">Cale s&egrave;che d'Esquimalt &ndash; Bienvenue</a></li>
 					<li> <a href="emp-loc-fra.html">Emplacement</a></li>
 					<li> <a href="services-fra.html">Services</a></li>
-
 					<li><a href="conduite-conduct-fra.html">Code de conduite</a></li>
 					<li><a href="entreprises-firms-fra.html">Entreprises de radoub</a></li>
-					<li> <a href="env/programme-program-fra.html">Programme environnemental</a>
-
+					<li><a href="env/programme-program-fra.html">Programme environnementale</a>
 						<ul>
-							<li> <a href="env/politique-policy-fra.html">Politique environnementale</a></li>
-							<li><a href="env/gestion-management-fra.html">Meilleures pratiques de gestion de l'environnement</a></li>
+							<li><a href="env/politique-policy-fra.html">Politique environnementale</a></li>
 							<li><a href="env/interet-interest-fra.html">Articles d'int&eacute;r&ecirc;t</a></li>
 						</ul>
 					</li>
-
 					<li><a href="dimensions-fra.html">Renseignements g&eacute;n&eacute;raux</a></li>
 					<li><a href="historique-history-fra.html">Historique</a>
-
 						<ul>
 							<li> <a href="his/1921-fra.html">Historique&nbsp;1921&nbsp;&ndash; 1923</a></li>
 							<li> <a href="his/1925-fra.html">Historique&nbsp;1925</a></li>
@@ -115,12 +110,11 @@
 							<li> <a href="his/article-fra.html">Article sur le <acronym title="Queen Elizabeth">QE</acronym></a></li>
 						</ul>
 					</li>
-
-					<li> <a href="https://cse-egd.tpsgc-pwgsc.gc.ca/reserve-book-fra.cfm">R&eacute;servation pour travaux le <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym></a></li>
+					<li><a href="https://cse-egd.tpsgc-pwgsc.gc.ca/reserve-book-fra.cfm">R&eacute;servation pour travaux le <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym></a></li>
 					<li><a href="rendement-performance-fra.html">Norme de rendement</a></li>
 				</ul>
 				<ul>
-					<li> <a href="cn-cu-fra.html">Contactez <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym></a></li>
+					<li><a href="cn-cu-fra.html">Contactez <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym></a></li>
 				</ul>
 			</div>
 
